# portafolio

./: README.md
map Trie/: Trie.h  mapTrie.cpp  mapTrie.h
server https/: README.txt  estilos.css  hola.html  index.html  s  server.cpp
server https/errores/: 400.html  404.html  405.html  505.html  llave.key
server https/gato/: gato.html  index.html  script.js  styles.css
servidor y receptor de archivos con nodos TCP/: readme.txt
servidor y receptor de archivos con nodos TCP/recipient/: CMakeLists.txt
servidor y receptor de archivos con nodos TCP/recipient/src/: recipient.cpp
servidor y receptor de archivos con nodos TCP/sender/fileFolder/: alexis.txt  foto.png.enc
servidor y receptor de archivos con nodos TCP/sender/src/: sender.cpp
